
	fixed a minor bug in the ylim argument of gap.plot
	twoord.plot had some bugs cleaned up and now has a do.first argument
	fixed the missing background colors in addtable2plot
	allowed floating.pie to ignore zero and NA values (thanks to Jose deSantos)
	added the "stax" argument to gap.plot (thanks to Zheng Lu)
	fixed the problem with "yaxlab" in gap.barplot (thanks to Giorgio Galetti)

version 3.4-7

	added automatic spreading out to pie.labels
	fixed the "priorities extremes" bug in gantt.chart (thanks to Michael Motta)
	pyramid.plot now accepts NA values (thanks to Susumu Tanimura)
	radial.plot now does a rank clock plot (thanks to Don Dennerline)

version 3.4-6

	fixed the kite line positioning in kiteChart (thanks to Justin Dellinger)

version 3.4-5

	fixed the upside down character bug in arctext
	fixed the typo in the demo function for kite chart

version 3.4-4

	added the radial.grid function to the NAMESPACE

version 3.4-3

	minor bug that counted NAs in the propbrk function fixed

version 3.4-2

	Character spacing and placement improved in draw.arc and arctext (thanks to Ted Toal)
	radialtext and draw.radial.line functions added (also thanks to Ted Toal)
	weighted.hist now allows a custom X axis to be displayed (thanks to Ben Graf)
	Added the barlabels function

version 3.4-1

	Fixed the alignment problem in pie3D and rationalized angle increments
	Added the raw.means.plot functions contributed by Henrik Singmann
	vastly improved the speed of the sizetree function
	added the "varpos" argument to the kiteChart function - thanks to Nikolaus Lampardariou)

version 3.4

	added the border argument to the sizetree function
	multhist now returns all values from hist - thanks to John Muccigrosso
	fixed a bug in addtable2plot that appeared on plots with a log x axis
	fixed an almost invisible bug in drawSectorAnnulus - thanks to Denes
	added the "mar" argument to pie3D - thanks to Qinghua Zhao

version 3.3-9
