@@ -1,19 +1,21 @@
 Package: plotrix
-Version: 3.4-8
-Date: 2013-06-12
+Version: 3.5
+Date: 2013-07-25
 Title: Various plotting functions
-Author: Jim Lemon, Ben Bolker, Sander Oom, Eduardo Klein, Barry
-        Rowlingson, Hadley Wickham, Anupam Tyagi, Olivier Eterradossi,
-        Gabor Grothendieck, Michael Toews, John Kane, Rolf Turner, Carl
-        Witthoft, Julian Stander, Thomas Petzoldt, Remko Duursma, Elisa
-        Biancotto, Ofir Levy, Christophe Dutang, Peter Solymos, Robby
-        Engelmann, Michael Hecker, Felix Steinbeck, Hans Borchers,
-        Henrik Singmann,Ted Toal
+Author: Jim Lemon, Ben Bolker, Sander Oom,
+	Eduardo Klein, Barry Rowlingson,
+	Hadley Wickham, Anupam Tyagi,
+	Olivier Eterradossi, Gabor Grothendieck,
+	Michael Toews, John Kane, Rolf Turner,
+	Carl Witthoft, Julian Stander, Thomas Petzoldt,
+	Remko Duursma, Elisa Biancotto, Ofir Levy,
+	Christophe Dutang, Peter Solymos, Robby Engelmann, 
+	Michael Hecker, Felix Steinbeck, Hans Borchers,
+	Henrik Singmann,Ted Toal,Derek Ogle
 Maintainer: Jim Lemon <jim@bitwrit.com.au>
-Description: Lots of plots, various labeling, axis and color scaling
-        functions.
+Description: Lots of plots, various labeling, axis and color scaling functions.
 License: GPL (>= 2)
-Packaged: 2013-06-12 11:08:04 UTC; root
+Packaged: 2013-07-25 08:28:54 UTC; root
 NeedsCompilation: no
 Repository: CRAN
-Date/Publication: 2013-06-15 11:43:34
+Date/Publication: 2013-07-25 10:42:30
